<resources>
    <string name="app_name">爱安卓</string>

    //状态提示
    <string name="loading">加载中</string>
    <string name="error">出错啦!</string>
    <string name="reload">重新加载</string>
    <string name="empty">这里什么都没有</string>
    <string name="network_error">网络异常,请检查网络</string>
    <string name="exit_app_prompt">再按一次退出应用</string>

    //导航栏
    <string name="tab_home">首页</string>
    <string name="tab_knowledge_system">知识体系</string>
    <string name="tab_wx_article">公众号</string>
    <string name="tab_navigation">导航</string>
    <string name="tab_project">项目</string>

    //Toolbar菜单
    <string name="website">常用网站</string>
    <string name="search">搜索</string>

    //抽屉菜单
    <string name="drawer_nav_favorite">收藏</string>
    <string name="drawer_nav_setting">设置</string>
    <string name="drawer_nav_about_us">关于我们</string>
    <string name="drawer_header_username">用户名</string>
    <string name="drawer_nav_logout">退出登录</string>
    <string name="drawer_nav_night_mode">夜间模式</string>
    <string name="drawer_nav_day_mode">日间模式</string>

    //首页文章
    <string name="article_top">置顶</string>
    <string name="collect_success">收藏成功</string>
    <string name="uncollect_success">取消收藏</string>

    //登录注册
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="username_or_psw_not_empty">用户名或密码不能为空</string>
    <string name="password_repeat_incorrect">两次密码不一致</string>
    <string name="repeat_psw">请重复密码</string>
    <string name="or">或</string>
    <string name="email">邮箱</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="prompt">提示</string>
    <string name="is_logout">是否退出登录?</string>
    <string name="sure_logout">退出</string>
    <string name="cancel">取消</string>
    <string name="email_psw_not_empty">邮箱或密码不能为空</string>

    //搜索
    <string name="search_history">搜索历史</string>
    <string name="clear_search_history">清空</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_hint">发现更多干货</string>
    <string name="search_history_empty_hint">快来搜点干货吧 (*^__^*)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
