<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search.SearchActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/search_title_bar_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/colorPrimaryToolbar"
        >
        <ImageView
            android:id="@+id/search_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back_white"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_20"/>
        <EditText
            android:id="@+id/search_et"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="@dimen/dp_35"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:background="@drawable/bg_search_shape"
            android:layout_gravity="center_vertical"
            android:hint="@string/search_hint"
            android:textColor="@color/colorWhite"
            android:paddingVertical="@dimen/dp_5"
            android:paddingHorizontal="@dimen/dp_10"
            android:gravity="center_vertical"
            android:textColorHint="@color/color_search_hint"
            android:textSize="@dimen/sp_16"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:inputType="text"
            />
        <Button
            android:id="@+id/search_btn"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_30"
            android:text="@string/search"
            android:background="@drawable/bg_search_btn"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/hot_search"
            android:textColor="@color/color_hot_search"/>
        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/search_hot_flow_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_20"
            app:max_select="1"
            >
        </com.zhy.view.flowlayout.TagFlowLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:text="@string/search_history"
                android:textColor="@color/color_search_common"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/search_clear_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_search_history"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_dark"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/icon_trash"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:id="@+id/search_empty_hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_history_empty_hint"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>