<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@color/common_bg">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_bg">
        <ImageView
            android:id="@+id/login_back_iv"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/icon_cancel"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/sp_36"
        android:gravity="center"
        android:background="@color/common_bg"
        android:textColor="@color/common_text_default"
        android:layout_marginTop="@dimen/dp_30"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:elevation="@dimen/dp_3"
        android:layout_gravity="center_horizontal"
        android:background="@color/common_bg">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            >
            <EditText
                android:id="@+id/login_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="@dimen/dp_10"
                android:background="@null"
                android:drawableLeft="@drawable/icon_username"
                android:hint="@string/username"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_line"
                android:layout_marginVertical="20dp"/>
            <EditText
                android:id="@+id/login_psw_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="@dimen/dp_10"
                android:inputType="textPassword"
                android:background="@null"
                android:drawableLeft="@drawable/icon_psw"
                android:hint="@string/password"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="@color/common_bg">
        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_60"
            android:background="@drawable/bg_login_btn_shape"
            android:text="@string/login"
            android:textColor="@color/common_bg"
            android:textSize="@dimen/sp_18"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/or"
            android:textSize="@dimen/sp_18"
            android:layout_marginVertical="@dimen/dp_20"/>
        <Button
            android:id="@+id/login_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_60"
            android:background="@drawable/bg_register_btn_shape"
            android:text="@string/register"
            android:textColor="@color/common_bg"
            android:textSize="@dimen/sp_18"
            />
    </LinearLayout>
</LinearLayout>